2009-10-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Missing images at 350.org due to wrong URLs
        https://bugs.webkit.org/show_bug.cgi?id=30748

        Test: fast/dom/HTMLImageElement/parse-src.html

        * dom/Element.cpp:
        (WebCore::Element::getURLAttribute): Pass the attribute value through deprecateParseURL().
        This matches what the Objective-C bindings do, as well as what HTMLImageLoader::sourceURI()
        and SVGImageLoader::sourceURI() do.

2009-10-24  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed.

        [Qt] Build fix for QtWebKit after r50013.

        * WebCore.pro:

2009-10-24  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, build fix.

        [V8] Fix up to accommodate for HTMLAllCollection changes in
        http://trac.webkit.org/changeset/49998.

        * WebCore.gypi:
        * bindings/scripts/CodeGeneratorV8.pm:
        * bindings/v8/custom/V8CustomBinding.h:
        * bindings/v8/custom/V8HTMLDocumentCustom.cpp:

2009-10-23  Dan Bernstein  <mitz@apple.com>

        Reviewed by Alexey Proskuryakov.

        <rdar://problem/7294131> Assertion failure in AuthenticationMac at
        mac(const Credential&) after authenticating to MobileMe Gallery movie

        * platform/network/Credential.cpp:
        (WebCore::Credential::Credential): Initialize m_persistence.
        (WebCore::Credential::isEmpty): Made this method const.
        * platform/network/Credential.h:
        * platform/network/mac/AuthenticationMac.mm:
        (WebCore::mac): Return nil if the Credential is empty.

2009-10-23  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Timothy Hatcher.

        Fixes <https://bugs.webkit.org/show_bug.cgi?id=30617>.
        Web Inspector: Resources Scope Bar Should Allow Combinations.
        
        Refactor the filtering in ResourcePanel to make it match ConsoleView,